# pseudoku

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  p2  p3  p4  sudoku.c
src/: backtrack.c  backtrack.h  cell.c  cell.h  constants.h  debug.h  generator.c  generator.h  interactive.c  interactive.h  iter.c  iter.h  puzzle.c  puzzle.h  strategy.c  strategy.h  sudoku.c
