cmake_minimum_required(VERSION 2.6)

project(pseudoku)
add_definitions(-std=c99)
add_definitions(-W)
add_definitions(-Wall)
add_definitions(-Wextra)
add_definitions(-pedantic)
add_definitions(-g)
add_definitions(-O2)
add_executable(sudoku src/sudoku.c src/iter.c src/cell.c src/puzzle.c src/strategy.c src/backtrack.c src/generator.c)
target_link_libraries(sudoku ${LIBS})
